Capturing appears stable now. - Removed scrollbars from capture (still small issue with that)
Improved script commenting and structure

--- a/inject.css
+++ b/inject.css
@@ -19,7 +19,11 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
+
     overflow: hidden;
     width: 100%;
     height: 100%;
+
+    -webkit-box-sizing: border-box;
 }
+
